--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header class="headbox">
         <a href="" class="logo">-Roy-</a>
         <nav class="navbar">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">Services</a>
-            <a href="">Portfolio</a>
-            <a href="">Contact</a>
+            <a href="index.html" style="color: rgb(58,69,230);">Home</a>
+            <a href="about.html">About</a>
+            <a href="services.html">Services</a>
+            <a href="Portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     
@@ -26,7 +26,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quia officia sit cumque id enim dolore recusandae quisquam nam fuga quas nesciunt culpa illum esse tenetur aut quidem, harum eveniet soluta assumenda voluptate vero tempora aspernatur deserunt. At, perferendis deserunt. </p>
             <div class="btn-box">
                 <a href="">Hire Me</a>
-                <a href="">Let's Talk</a>
+                <a href="contact.html">Let's Talk</a>
             </div>
             <div class="icons">
                 <a href=""><i class='bx bxl-facebook' style='color:#ffffff' ></i></a>
