--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,13 +12,9 @@
         <nav class="navbar">
             <a href="index.html" >Home</a>
             <a href="about.html">About</a>
-            <a href="services.
-   html">Services</a>
-            <a href="Portfolio.
-   html" style="color: rgb(58,69,230);
-   ">Portfolio</a>
-            <a href="contact.
-   html">Contact</a>
+            <a href="services.html">Services</a>
+            <a href="Portfolio.html" style="color: rgb(58,69,230);">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 </body>
