--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
         </div>
         <div class="aboutdata">
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nihil porro ratione, architecto voluptates debitis! Quos aperiam quis corrupti veritatis! Provident, explicabo quidem? Illum commodi fugiat suscipit, perspiciatis ipsa laboriosam, aperiam minus at magni rem labore adipisci eveniet accusamus voluptatem dolorum quam laborum molestias repellat impedit molestiae similique! Soluta, esse!</p>
         </div>
     </div>
     </div>
