--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=10">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,12 +12,9 @@
         <nav class="navbar">
             <a href="index.html" >Home</a>
             <a href="about.html">About</a>
-            <a href="services.
-   html">Services</a>
-            <a href="Portfolio.
-   html">Portfolio</a>
-            <a href="contact.
-   html" style="color: rgb(58,69,230);">Contact</a>
+            <a href="services.html">Services</a>
+            <a href="Portfolio.html">Portfolio</a>
+            <a href="contact.html" style="color: rgb(58,69,230);">Contact</a>
         </nav>
     </header>
 </body>
