--- a/services.html
+++ b/services.html
@@ -12,12 +12,9 @@
         <nav class="navbar">
             <a href="index.html" >Home</a>
             <a href="about.html">About</a>
-            <a href="services.
-   html" style="color: rgb(58,69,230);">Services</a>
-            <a href="Portfolio.
-   html">Portfolio</a>
-            <a href="contact.
-   html">Contact</a>
+            <a href="services.html" style="color: rgb(58,69,230);">Services</a>
+            <a href="Portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 </body>
